--- a/core/core-misc/pom.xml
+++ b/core/core-misc/pom.xml
@@ -171,6 +171,14 @@
             <version>${jackson.version}</version>
         </dependency>
 
+        <!-- Fast Cache -->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>2.8.5</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- JCABI -->
         <dependency>
             <groupId>org.aspectj</groupId>
