--- a/core/core-misc/pom.xml
+++ b/core/core-misc/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>core</artifactId>
         <groupId>org.imanity.framework</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -83,7 +81,7 @@
                     <XnoInline>true</XnoInline>
                     <encoding>${project.build.sourceEncoding}</encoding>
                     <forceAjcCompile>true</forceAjcCompile>
-                    <sources/><!-- this is important!-->
+                    <sources /><!-- this is important!-->
                     <argumentFileName>builddef-${project.name}.lst</argumentFileName>
                     <excludes>
                         <exclude>**/package-info.java</exclude>
