--- a/core/core-services/pom.xml
+++ b/core/core-services/pom.xml
@@ -117,6 +117,12 @@
             <version>2.2</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>19.0.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
