--- a/core/core-misc/pom.xml
+++ b/core/core-misc/pom.xml
@@ -193,6 +193,13 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-expression</artifactId>
+            <version>5.3.2</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- TESTS -->
         <dependency>
             <groupId>javax.el</groupId>
