--- a/core/core-misc/pom.xml
+++ b/core/core-misc/pom.xml
@@ -197,7 +197,7 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-expression</artifactId>
             <version>5.3.2</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
 
         <!-- TESTS -->
