--- a/bukkit/bukkit-common/pom.xml
+++ b/bukkit/bukkit-common/pom.xml
@@ -260,6 +260,20 @@
             <version>6.0.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>7.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-commons</artifactId>
+            <version>7.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
